# strata

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  deepseek-innovation.md  last-answer.md
apps/: cli_common.hpp  strata_chat.cpp  strata_deepseek_run.cpp  strata_host_expert_probe.cpp  strata_inspect.cpp  strata_run.cpp  strata_sim.cpp  strata_tokenize.cpp  strata_topology_probe.cu
apps/strata-tui/: Cargo.toml
apps/strata-tui/src/: app.rs  config.rs  main.rs  process.rs  protocol.rs  theme.rs  ui.rs
docs/: README.md  architecture.md  current-architecture.md  deepseek-v4-runtime.md  flash-attention.md  glm52-throughput-handoffs.md  model-bringup.md  model-format.md  research-roadmap.md  tui.md
docs/experiments/: 0000-foundation-2026-07-14.md  0001-glm52-runtime-observability-2026-07-14.md  0002-glm52-topology-probe-2026-07-15.md  0003-glm52-device-weight-arena-2026-07-15.md  0006-dsv4-device-moe-2026-07-15.md  0006-dsv4-device-moe-baseline-handoff-2026-07-16.md  0007-dsv4-device-moe-attention-workers-2026-07-16.md  0008-dsv4-fast-loading-promotion-2026-07-16.md  0010-dsv4-graph-phase-profile-2026-07-16.md  0011-dsv4-device-weight-arena-2026-07-16.md  0012-dsv4-long-context-cache-2026-07-16.md  0013-generic-flash-attention-2026-07-19.md  0014-generic-flash-attention-performance-2026-07-19.md  0015-production-flash-decode-2026-07-19.md  0016-dsv4-bounded-batched-prefill-2026-07-19.md  0017-dsv4-batched-expert-dispatch-2026-07-22.md  0017-dsv4-gpu-lightning-indexer-screen-2026-07-19.md  0018-dsv4-device-activations-2026-07-22.md  0018-dsv4-tiered-kv-cache-2026-07-22.md  0019-dsv4-compact-cache-storage-2026-07-22.md  0020-incremental-kv-chat-2026-07-22.md  0021-dsv4-gpu-lightning-indexer-2026-07-22.md  0022-dsv4-trace-prefetch-simulation-2026-07-22.md
docs/issues/: production-scale-batched-prefill.md
include/strata/: attention.hpp  chat_protocol.hpp  checkpoint.hpp  checkpoint_io.hpp  compressed_tensors.hpp  cuda_backend.hpp  deepseek_admission.hpp  deepseek_checkpoint.hpp  deepseek_diagnostics.hpp  deepseek_kv_cache.hpp  deepseek_manifest.hpp  deepseek_ops.hpp  deepseek_runtime.hpp  glm_int4.hpp  glm_manifest.hpp  glm_ops.hpp  glm_runtime.hpp  kernel_abi.h  model.hpp  model_adapter.hpp  model_format.h  numerics.hpp  residency.hpp  result.hpp  route_predictor.hpp  runtime.hpp  runtime_support.hpp  safetensors.hpp  sampling.hpp  simulator.hpp  tokenizer.hpp  trace.hpp  types.hpp  worker_pool.hpp
kernels/cpu/: glm_int4.cpp  q4_reference.cpp
kernels/cuda/: README.md  backend.cu
scripts/: check_glm52_determinism.sh  run_deepseek_v4_ab_matrix.sh  run_deepseek_v4_bounded_prefill_correctness.sh  run_deepseek_v4_bounded_prefill_matrix.sh  run_deepseek_v4_context_capacity_ab.sh  run_deepseek_v4_device_moe_ab.sh  run_deepseek_v4_direct_read_ab.sh  run_deepseek_v4_kv_cache_correctness.sh  run_deepseek_v4_lightning_indexer_correctness.sh  run_deepseek_v4_long_context_smoke.sh  run_deepseek_v4_observability.sh  run_deepseek_v4_overlap_stage_warmup_ab.sh  run_deepseek_v4_parallel_read_ab.sh  run_deepseek_v4_parallel_warmup_ab.sh  run_deepseek_v4_smoke.sh  run_deepseek_v4_woa_lookup_ab.sh  run_glm52_baseline.sh  run_glm52_flash_attention_correctness.sh  run_glm52_host_expert_matrix.sh  run_glm52_observability.sh  run_glm52_topology_probe.sh  run_incremental_kv_chat_ab.sh  run_pt_mhc_fix.sh  run_pt_repro.sh  run_pt_serial_attn.sh  run_pt_serial_moe.sh  run_strata_chat_smoke.sh
src/: attention.cpp  chat_protocol.cpp  checkpoint.cpp  checkpoint_common.hpp  checkpoint_io.cpp  compressed_tensors.cpp  cuda_backend_stub.cpp  cuda_stats_delta.hpp  deepseek_admission.cpp  deepseek_checkpoint.cpp  deepseek_diagnostics.cpp  deepseek_kv_cache.cpp  deepseek_manifest.cpp  deepseek_ops.cpp  deepseek_runtime.cpp  glm_manifest.cpp  glm_ops.cpp  glm_runtime.cpp  json_cursor.cpp  json_cursor.hpp  model.cpp  numerics.cpp  residency.cpp  route_predictor.cpp  runtime.cpp  runtime_support.cpp  safetensors.cpp  sampling.cpp  simulator.cpp  tokenizer.cpp  trace.cpp  worker_pool.cpp
tests/: test.hpp  test_attention.cpp  test_chat_protocol.cpp  test_compressed_tensors.cpp  test_cuda_backend.cpp  test_deepseek_diagnostics.cpp  test_deepseek_kv_cache.cpp  test_deepseek_manifest.cpp  test_deepseek_ops.cpp  test_deepseek_runtime.cpp  test_glm_int4.cpp  test_glm_ops.cpp  test_main.cpp  test_model.cpp  test_predictor.cpp  test_q4.cpp  test_residency.cpp  test_runtime.cpp  test_safetensors.cpp  test_sampling.cpp  test_tokenizer.cpp  test_trace.cpp
tests/data/: route_trace_v1.txt
tools/: README.md  decode_tokens.cpp
