[package]
name = "strata-tui"
version = "0.1.0"
description = "A Ratatui cockpit for the Strata inference engine"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = { version = "=0.30.2", default-features = false, features = ["crossterm", "crossterm_0_29", "layout-cache"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

